# Polaris

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  app.py  conftest.py  create_admin.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional.txt  requirements.txt  run_tests.py
config/: __init__.py  base.py  monitoring.py  survivorship.py  validation.py
docs/: README.md  commands.md  data-integration-platform-overview.md  data-integration-platform-tech-doc.md  data-quality-dashboard.md  data-quality-field-configuration.md  importer-dod.md  importer-dor.md  importer-duplicate-check-optimizations.md  importer-feature-flag.md  importer-merge-runbook.md  salesforce-field-mapping-summary.md  salesforce-mapping-examples.md  salesforce-mapping-gap-analysis.md  salesforce-mapping-guide.md  salesforce-mapping-testing-checklist.md  salesforce-transforms-reference.md  sprint1-retrospective.md  sprint3-retrospective.md  sprint4-retrospective.md  sprint5-analytics-alignment.md  sprint5-merge-logging-audit.md  sprint5-survivorship-decisions.md
scripts/: add_ingest_params_json_column.py  create_admin.py  create_contact_tables.py  create_organization.py  format.bat  format.sh  init_database.py  seed_database.py  test_salesforce_query.py  verify_salesforce_count.py
templates/: base.html  index.html  nav.html
tests/: README.md  test_admin_robustness.py  test_admin_simple.py  test_api_routes.py  test_app_additional.py  test_app_config.py  test_base_model_comprehensive.py  test_contact_models.py  test_data_quality_service.py  (+45 more)
(+185 files in other folders)
