# Polaris Project Configuration
# Configuration for development tools (black, isort, mypy, etc.)

[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris"
version = "0.0.0"
description = "Polaris data integration platform"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
"importer-salesforce" = [
    "simple-salesforce==1.12.5",
    "salesforce-bulk==2.2.0",
]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | migrations
  | __pycache__
  | \.eggs
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["flask_app", "config"]
skip = ["migrations", "venv", ".venv", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    "migrations/",
    "venv/",
    ".venv/",
    "__pycache__/",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]
# Note: per-file-ignores configured in .pre-commit-config.yaml
